// Package api provides primitives to interact with the openapi HTTP API.
//
// Code generated by github.com/oapi-codegen/oapi-codegen/v2 version v2.7.0 DO NOT EDIT.
package api

import (
	"time"

	openapi_types "github.com/oapi-codegen/runtime/types"
)

// CreateDoctorRequest defines model for CreateDoctorRequest.
type CreateDoctorRequest struct {
	// Email Doctor's email address
	Email openapi_types.Email `json:"email"`

	// LicenseNumber Medical license number
	LicenseNumber string `json:"license_number"`

	// Name Doctor's full name
	Name string `json:"name"`

	// Phone Doctor's phone number
	Phone string `json:"phone"`

	// Specialty Doctor's medical specialty
	Specialty *string `json:"specialty,omitempty"`
}

// CreatePrescriptionRequest defines model for CreatePrescriptionRequest.
type CreatePrescriptionRequest struct {
	// MedicId ID of the doctor creating this prescription
	MedicId openapi_types.UUID `json:"medic_id"`

	// Medicaments List of medicaments in this prescription
	Medicaments []Medicament `json:"medicaments"`

	// UserId ID of the user this prescription is for
	UserId openapi_types.UUID `json:"user_id"`
}

// CreateUserRequest defines model for CreateUserRequest.
type CreateUserRequest struct {
	// Email User's email address
	Email openapi_types.Email `json:"email"`

	// FirebaseToken Firebase Cloud Messaging token
	FirebaseToken string `json:"firebase_token"`

	// Name User's full name
	Name string `json:"name"`

	// Phone User's phone number
	Phone string `json:"phone"`
}

// Doctor defines model for Doctor.
type Doctor struct {
	// CreatedAt Doctor creation timestamp
	CreatedAt time.Time `json:"created_at"`

	// Email Doctor's email address
	Email openapi_types.Email `json:"email"`

	// Id Unique doctor identifier
	Id openapi_types.UUID `json:"id"`

	// LicenseNumber Medical license number
	LicenseNumber string `json:"license_number"`

	// Name Doctor's full name
	Name string `json:"name"`

	// Phone Doctor's phone number
	Phone string `json:"phone"`

	// Specialty Doctor's medical specialty
	Specialty *string `json:"specialty,omitempty"`

	// UpdatedAt Last update timestamp
	UpdatedAt time.Time `json:"updated_at"`
}

// Error defines model for Error.
type Error struct {
	// Details Additional error details
	Details *string `json:"details,omitempty"`

	// Error Error message
	Error string `json:"error"`
}

// Medicament defines model for Medicament.
type Medicament struct {
	// Dosage Dosage amount and unit
	Dosage string `json:"dosage"`

	// Doses Total number of doses for this medicament.
	// This determines when the prescription ends.
	// Examples:
	// - 7 doses with frequency "24:00" = 7 days (once daily for a week)
	// - 14 doses with frequency "12:00" = 7 days (twice daily for a week)
	// - 21 doses with frequency "08:00" = 7 days (three times daily for a week)
	Doses int `json:"doses"`

	// Frequency Duration between doses in HH:MM format.
	// - "24:00" = once daily
	// - "12:00" = twice daily (every 12 hours)
	// - "08:00" = three times daily (every 8 hours)
	// - "06:00" = four times daily (every 6 hours)
	Frequency string `json:"frequency"`

	// Name Name of the medication
	Name string `json:"name"`

	// Time Specific times to take the medication in HH:MM format (24-hour).
	// The number of times must match the frequency:
	// - frequency "24:00" requires 1 time
	// - frequency "12:00" requires 2 times
	// - frequency "08:00" requires 3 times
	// - frequency "06:00" requires 4 times
	Time []string `json:"time"`
}

// Prescription defines model for Prescription.
type Prescription struct {
	// Active Whether this prescription is active
	Active bool `json:"active"`

	// CreatedAt Prescription creation timestamp
	CreatedAt time.Time `json:"created_at"`

	// Id Unique prescription identifier
	Id openapi_types.UUID `json:"id"`

	// MedicId ID of the doctor who created this prescription
	MedicId openapi_types.UUID `json:"medic_id"`

	// Medicaments List of medicaments in this prescription
	Medicaments []Medicament `json:"medicaments"`

	// UpdatedAt Last update timestamp
	UpdatedAt time.Time `json:"updated_at"`

	// UserId ID of the user this prescription belongs to
	UserId openapi_types.UUID `json:"user_id"`
}

// UpdateDoctorRequest defines model for UpdateDoctorRequest.
type UpdateDoctorRequest struct {
	// Email Doctor's email address
	Email openapi_types.Email `json:"email"`

	// Name Doctor's full name
	Name string `json:"name"`

	// Phone Doctor's phone number
	Phone string `json:"phone"`

	// Specialty Doctor's medical specialty
	Specialty *string `json:"specialty,omitempty"`
}

// UpdatePrescriptionRequest defines model for UpdatePrescriptionRequest.
type UpdatePrescriptionRequest struct {
	// Medicaments Updated list of medicaments
	Medicaments []Medicament `json:"medicaments"`
}

// UpdateUserRequest defines model for UpdateUserRequest.
type UpdateUserRequest struct {
	// Email User's email address
	Email openapi_types.Email `json:"email"`

	// Name User's full name
	Name string `json:"name"`

	// Phone User's phone number
	Phone string `json:"phone"`
}

// User defines model for User.
type User struct {
	// CreatedAt User creation timestamp
	CreatedAt time.Time `json:"created_at"`

	// Email User's email address
	Email openapi_types.Email `json:"email"`

	// FirebaseToken Firebase Cloud Messaging token
	FirebaseToken *string `json:"firebase_token,omitempty"`

	// Id Unique user identifier
	Id openapi_types.UUID `json:"id"`

	// Name User's full name
	Name string `json:"name"`

	// NotificationsEnabled Whether notifications are enabled for this user
	NotificationsEnabled bool `json:"notifications_enabled"`

	// Phone User's phone number
	Phone string `json:"phone"`

	// UpdatedAt Last update timestamp
	UpdatedAt time.Time `json:"updated_at"`
}

// DoctorId defines model for DoctorId.
type DoctorId = openapi_types.UUID

// PrescriptionId defines model for PrescriptionId.
type PrescriptionId = openapi_types.UUID

// UserId defines model for UserId.
type UserId = openapi_types.UUID

// BadRequest defines model for BadRequest.
type BadRequest = Error

// InternalServerError defines model for InternalServerError.
type InternalServerError = Error

// NotFound defines model for NotFound.
type NotFound = Error

// ListPrescriptionsParams defines parameters for ListPrescriptions.
type ListPrescriptionsParams struct {
	// UserId Filter by user ID
	UserId *openapi_types.UUID `form:"user_id,omitempty" json:"user_id,omitempty"`

	// MedicId Filter by doctor ID
	MedicId *openapi_types.UUID `form:"medic_id,omitempty" json:"medic_id,omitempty"`

	// Active Filter by active status
	Active *bool `form:"active,omitempty" json:"active,omitempty"`
}

// UpdateFirebaseTokenJSONBody defines parameters for UpdateFirebaseToken.
type UpdateFirebaseTokenJSONBody struct {
	// FirebaseToken Firebase Cloud Messaging token
	FirebaseToken string `json:"firebase_token"`
}

// ToggleNotificationsJSONBody defines parameters for ToggleNotifications.
type ToggleNotificationsJSONBody struct {
	// Enabled Whether notifications should be enabled
	Enabled bool `json:"enabled"`
}

// CreateDoctorJSONRequestBody defines body for CreateDoctor for application/json ContentType.
type CreateDoctorJSONRequestBody = CreateDoctorRequest

// UpdateDoctorJSONRequestBody defines body for UpdateDoctor for application/json ContentType.
type UpdateDoctorJSONRequestBody = UpdateDoctorRequest

// CreatePrescriptionJSONRequestBody defines body for CreatePrescription for application/json ContentType.
type CreatePrescriptionJSONRequestBody = CreatePrescriptionRequest

// UpdatePrescriptionJSONRequestBody defines body for UpdatePrescription for application/json ContentType.
type UpdatePrescriptionJSONRequestBody = UpdatePrescriptionRequest

// CreateUserJSONRequestBody defines body for CreateUser for application/json ContentType.
type CreateUserJSONRequestBody = CreateUserRequest

// UpdateUserJSONRequestBody defines body for UpdateUser for application/json ContentType.
type UpdateUserJSONRequestBody = UpdateUserRequest

// UpdateFirebaseTokenJSONRequestBody defines body for UpdateFirebaseToken for application/json ContentType.
type UpdateFirebaseTokenJSONRequestBody UpdateFirebaseTokenJSONBody

// ToggleNotificationsJSONRequestBody defines body for ToggleNotifications for application/json ContentType.
type ToggleNotificationsJSONRequestBody ToggleNotificationsJSONBody
